--- a/_keywords/excerpts/d0218.md
+++ b/_keywords/excerpts/d0218.md
@@ -1,107 +1,128 @@
-## Translation  
-
-Left margin:  
-Lo pres[to] la  
-p.te exp.te no sa-  
+# Summary  
+The shift from French to Spanish dominion brought with it new laws, new customs, and new strategies for enslaved resistance. In 1773, Catharina, enslaved on the Destrehan Plantation, claimed her freedom based on a new system of manumission that came to be called *coartación*.  A few things are important to note in her story. First, throughout the case,  Catharina argued for and defended her right to a lower self-purchase price based on an unspecified infirmity. How the participants reacted to her claims of disability is of interest to anyone studying the history of disability and how it intersects with race, gender, and bondage. Second, the enslaver of note in this case is none other than Étienne de Boré, the man known in the history of United States slavery as the innovator of sugar cultivation in Lower Louisiana. This makes Catharina's case a critical part of the history of the plantation in the United States. Third, Catharina is not arguing just for herself in her battle for freedom; included in her claim is her five-year old daughter, Felicité. Once again, kinship remains the tie that binds and sustains, inspiring resistance, refusals, and challenges that might have been impossible to imagine otherwise.
+  
+[Transcription](#transcription-(Spanish,-diplomatic))  
+[Translation](#translation-(English,-modern))  
+[Notes](#notes)  
+  
+## Transcription (Spanish, diplomatic)  
+  
+  
+[folio 2 recto] [digital 4]  
+  
+  
+[Marginalia:]  
+  
+Lo pres.<sup>to</sup> la  
+p.<sup>te</sup> exp.<sup>te</sup> no sa  
 ver firmar  
-nueva orleans  
+nueva orléans  
 25 de Junio de  
-1773 doy fe  
-linsmiento? [Almonseter?]  
-1, circled [in archival pen]  
-#276 [in archival pen]  
+1773 doy feé  
+  
+[Firmado:] Almonester  [Rubrica, Almonester]  
+  
+  
+[círculo, moderno, a lápiz] 1  
+[moderno, a lápiz azul] #276  
+  
+[Cuerpo:]  
+  
+Catharina mulata esclava de los   
+bienes de D. Juan Bautista Destrehan, en   
+la mejor forma que haya lugar en drõ   
+ante V.S. paresco y digo que por   
+hacerme bien algunas personas y en   
+recompensa de beneficios y servicios   
+que les ha prometrar hacer me quieren   
+aprontar el dinero a que pueda hacen   
+der el valor demi de libertad y la de mi   
+hija nom.<sup>da</sup>  de edad de cinco a.s   
+en cuya atencion Suplico a A.V.S. se   
+sirva mandar a D. Gabriel Facensda  
+y a D. Estevan Boré que administran   
+dichos bienes, nombren un terrero para   
+que hagan mi estimacion y la de mi   
+hija, que yo por mi parte nombró a S.  
+  
+  
+[f. 2 verso] [dig.5]  
+  
+  
+[rasgado] me otorguen la carta  
+[rasgado] conforme a drõ por tanto  
+[rasgado] se sirva proveer y man  
+dar [rasgado] llevo pedir por ser refus.<sup>a</sup>  
+lo sitios y Juro en lo necess.<sup>o</sup> &.<sup>a</sup>  
+  
+  
+Traslado___  
+  
+[Firmado:] Unzaga  [Rubrica, Unzaga]  
+  
+  
+[círculo, moderno, a lápiz] 2  
+  
+Proveio lo el S.<sup>r</sup> D. Luis de Unzaga y  
+Amezaga Brig.<sup>r</sup> de los rr<sup>s</sup> ex<sup>os</sup> y Gov.<sup>or</sup>  
+Grãl de esta Prov.<sup>a</sup> por S.M. q lo Fir-  
+mo en veinte y cinco de junio De   
+mil set<sup>s</sup> sesenta y tres_____  
+  
+[Firmado:] Andrés Almonester   
+y Roxas S.<sup>no</sup> pu.<sup>co</sup>   
+[Rubrica, Almonester]  
+  
+  
+N.<sup>n</sup>   En el mismo dia hise saver el decreto  
+q. ante de esta a la mulata Cathalina  
+doy Fee___  
+  
+[Firmado:] Almonester [Rubrica, Almonester]  
 
-Main page:
-Catharina mulata esclava de los 
-bienes de S. Juan Bautista Destrehan, en
-la mejor forma que haya lugar en [derecho (drõ)] 
-ante V. U. paresco y digo que por
-hacerme bien algunas personas y en
-recompensa de beneficios y servicios
-que les ha [prometrar] hacer me quieren
-aprontar el dinero a que pueda hacen-
-der [ascender] el valor de mi de mi libertad y la de mi
-hija nom.da (nombrada) Felicité de edad de cinco a.s (años)
-en cuya atencion suplico a A. V. S. se[si]
-sirva mandar a S. Gabriel Facensda [Gabriel Fazende]
-y a S.S. Estevan Boré que administran
-dichos bienes, nombren un terrero [tasaderp]  para
-que hagan mi estimacion y la de mi
-hija, que yo por mi parte nombró a S.
-# page 3 [badly ripped, missing words]
-—-------- me otorguen la car- [carta?]
-[sic] —------conforme a nro por tanto
-—----[sic] se sirva proveer y man-
-dar —--[sic] llevo ?pedir por ?ser refusar
-?lo sitios y tuvo en lo necessario [symbol] (esta/ella)
 
-Traslado.-----
-Unzaga
-
-Proveio lo el Sr. Don Luis de Unzaga y
-Amezaga Brig.r de los ers. Ex.e y Gov.or  
-Gral de esta Prov`a [Provincia] por S.M. que lo fir-
-mo en veinte y cinco de junio de mil siete cientos sesenta y tres 
-
-senores Almonester
-y Roxas S.No. pou ce
-
-En el mismo dia hise saver el decreto
-Q. ante de esta a la mulata Cathalina 
-doy Fee…
-Almonsters [signed]
-
-
-
-# English Translation
-
-Left margin:  
-[We present]   
-this present file. Not   
-Knowing how to sign.  
-New Orleans  
-25th of June of  
-1773   
+## Translation (English, modern)  
+  
+[page #1] [digital 4]  
+  
+  
+[Marginal note:]  
+  
+Presented without signature, [being her] not knowing how to sign. New Orleans 25th of June of 1773. I hereby certify,  
+  
+[Signed:] Almonester  [Rubrica, Almonester]  
+  
+  
+[circled, modern, in pencil] 1  
+[modern, in blue pencil] #276  
+  
+  
+[Body:]  
+  
+Catharina, mulata esclava [belonging] to the estate of Don Juan Bautista Destrehan, in the appropriate manner as provided by law, before Your Lordship appears and states that I have served well certain persons, and in recompense for the benefits and services that I have promised to do, I want to prepare the money that I can to amount to the value of my freedom, and that of my daughter, Felicité, five years of age. For this consideration I request, Your Honor, if it serves you, to order Don Gabriel Fazende and Estevan Boré, who administer this estate, to name an assessor to do my estimation and that of my daughter, which I, for my part, named herein.  
+  
+  
+[p. #2] [dig.5]  
+  
+  
+[ripped] grant me the freedom papers [ripped] in accordance with the law, thusly [ripped] you provide and order [ripped] I ask in hope that I am not refused this [my request], I swear in the way in which it is necessary, etc.   
+Translated.  
+  
+[Signed:] Unzaga  [Rubric, Unzaga]  
+  
+  
+[circled, modern, in pencil] 2  
+  
+Thus ordered: [By] the Lord Don Luis de Unzaga y Amezaga, Brigadier of the Royal Armies, and Governor General of this Province by His Majesty. Signed 25th of June 1773.  
+  
+[Signed:] Andrés Almonester y Roxas, Notary Public  
+[Rubric, Almonester]  
+  
+  
+Notarized: On the same day, having made known the decree which precedes to the mulata Catharina.  
+I certify,  
+  
+[Signed:] Almonester [Rubric, Almonester]  
 
 
-
-
-Main page:   
-Catharina, mulata esclava (enslaved mulata woman) of the [belonging to] / the estate of S. Juan Bautista Destrehan (S. Jean Baptiste Destrehan) in /
-the best manner provided by law/ 
-before Your Lordship appears and states that / 
-I have served well certain persons and in 
-recompense for the benefits and services
-that I have promised to do, I want to 
-prepare the money that I can to amount 
-to the value of my freedom and that of my 
-daughter  [hija, girl child] named Felicité, five years of age, 
-for this consideration I request Your Honour, if it serves
-you, to order Sr. Gabriel Facensda [Fazende]
-and Sr. Estevan Boré (Etienne de Boré), who administer
-this estate, to name an assessor to
-do my estimation and that of my
-daughter [hija, girl child], which I, for my part, named Sr…
-[badly ripped, missing words]
-—-------- grant me the [car…] (carta, i.e. manumission document)  
- —------according to ours, therefore
-—----it serves to provide and 
-order —- [summary: provide what is necessary for this]
-
-Translated.
-
-Unzaga
-
-[Prepared by] S. Don Luis de Unzaga
-Amezaga Briganderia of the Royal Armies and Governor 
-General of this Province for His Magesty 
-Signed
-25th of June of 1773
-
-Senores Almonester
-y Roxas, S. 
-
-On the same day, have seen these contents before this the 
-mulata Cathalina, 
-I attest.
-[Signature of Almonester]
+    
