--- a/_keywords/excerpts/d0281.md
+++ b/_keywords/excerpts/d0281.md
@@ -1,236 +1,742 @@
-﻿## Transcription
-
-
-Pruevas [Pruebas]  
+# Summary   
+Naneta, *mulata libre*, petitions the Spanish judiciary in a freedom suit for her kin, Maturine, *negra*, enslaved by Alexandre Boré. Not only does Boré refuse to grant Maturine her freedom, he countersues Naneta, claiming that he should not be forced to comply with these *coartación* proceedings. It is his opinion that Maturine has done nothing of value to gain her freedom, nor is she able to be considered worthy of the grace of liberty. Boré further accuses them both of being criminals, while declaring before the court that he, on the other hand, is a good and honorable man.
+   
+[Transcription](#transcription-(Spanish,-diplomatic))  
+[Translation](#translation-(English,-modern))  
+[Notes](#notes)  
+   
+## Transcription (Spanish, diplomatic)  
   
-De Dn. Alexandro Bauré  
-contra  
+[folio 0 recto] [digital 2]  
+  
+  
+Pruevas           1773___  
+  
+De D.<sup>n</sup> Alexandro Bauré  
+Contra  
 Naneta Mulata Libre  
+___  
+___  
   
-[Signature mark]  
+[Rubrica, Almonester]  
   
-~~N.16~~ N 3808  
-#291 [modern, in blue pencil]  
-Oct 29 1773 [modern, in pencil]  
+N.<sup>o</sup> 16  N 3808  
   
-  
-[f.0 v] BLANK  
-  
-[f. 1r]  
-  
-                                        1  
-Dn. Alex.dor Boré por mi poder en los autos seguidos   
-contra mi por Naneta mulata libre. Sobre la libertad   
-de mi negra Maturine digo q.e esto causa es recibida a prueva   
-y para la q.e tengo dar, se ha de service V. S.a mandar conce-   
-der diez dias mas de termino [Por Santo]  
-  
-A.V.S.      Suplico se Sirva porveer, y mandar como pido con justicia, estas, y juro no ser de malicia, y en lo necesario &.ce  
-  
-Leonardo Mazanga [signed]  
+[moderno, en lápiz azul] #291  
+[moderno, a lápiz] Oct 29 1773  
   
   
-#291 [modern, in blue pencil]  
+[f. 0 verso] [dig.3]  
   
-Como lo pide Comun  
-[signature]  
   
-1  Proveyo lo el señor D.n Luis de Unzaga   
-y amezaga Brigadier de los reales extos.   
-Gov.or Gral de esta Pro.a q. Lo rubrico en   
-Nueva Orleans a Veinte y nueve de Octubre   
-de mil sette Cientos setenta y tres__  
+[EN BLANCO]  
   
-[f. 1v]  
   
-N.n  El mismo dia mes y ano yo el   
-Es.no hise saver el decreto q.   
-antecede a Dn. Leonardo Ma-  
-zange doy fee.  
+[f. 1r] [dig.4]  
   
-N.n  En dho dia mes y ano yo el   
-Es.no hise saver el decr-  
-eto que antecede a Dn. [Jaciento]  
-Panis. Doy fee.  
   
-[f. 2r]  
+1  
+D.<sup>n</sup> Alex.<sup>dro</sup> Boré por mi poder en los autos Seguidos   
+contra mi por Naneta mulata Libre___ Sobre la libertad   
+de Mi negra Maturine digo q.<sup>e</sup> esto causa es recibida a prueva   
+y para la q.e tengo dar, Se ha de Service V. S.<sup>a</sup> mandar conce   
+der diez dias mas de termino Por tanto  
   
-                                        2  
-Dn. Alex.dro Bauré por mi poder en los autos q.e   
-ha promovido contra mi [la] Mulata Nanette sobre   
-q.e le otorgue la escritura de venta de mi negra [D]   
-Maturine, y lo de mas como mejor proceda de Dro.   
-digo q.e esta causa es recivida a prueva, y para en par-  
-te de la q.e devo dar se ha De service V.S.a mandar   
-q.e bajo de juram.to en forma en q.e no lo difiero   
-jure y declare en primer lugar dn Luis Dapre-  
-mone, y diga como es cierto q.e fue el mismo q.e le   
-dio la libertad a mi sollicitud, y q.e no lo huviera_   
-hecho, si no por mi por q.e se hallaba embarassa-  
-do y sin facultades de poder hazer una gracia exor-bitante.  
+A.V.S.      Suplico se Sirva proveer, y mandar como pido con justicia, costas, y juro no ser de malicia, y en lo necesario &.ce  
   
-2. [Item] como la dha mulata no le hizo ningun servicio   
-particular q.e mereciesse la libertad   
+[Firmado:] Leonardo Mazanga  
   
-3. [Item] como es cierto que la dha libertad se verifico q.do   
-me pidio mi hija para el matrimonio, y q.e se la di con-  
-cediendo me la instancia q.e le hize sobre la libertad de la--  
   
-[f. 2v]  
+[moderno, en lápiz azul] #291  
+Como lo pide Comun___  
   
-mulata, y q.e a consequencia le he recompensa-  
-do no solo haviendo le dando mi hija con [dote]   
-sufficiente, si no tambien sustiniendo lo en las car-  
-gas de su matrimonio  
+[Rubrica, Unzaga]  
   
-4. Que el mismo, y los demas testigos q.e presentara   
-bajo el propio rito declaren como es cierto, publi-co,   
-y no[tario] q.e despues q.e tuvo la libertad la mu-  
-lata esta una tenia hecho su [caxero] dando me   
-a guardar el dinero q.e juntava haziendo confi-  
-anza de [hombria] de bien.  
+[círculo, moderno, a lápiz] 1  
   
-[Item] como del concubinaje de Juan Aug[s]aud=  
+Proveyo lo el señor D.<sup>n</sup> Luis de Unzaga   
+y amezaga Brigadier de los reales extõs.   
+Gov.<sup>or</sup> Grãl de esta Pro.<sup>a</sup> q. lo rubrico en   
+Nueva Orleanza Veinte y nueve de Octubre   
+de mil sette Cientos Setenta y tres___  
+  
+  
+[f. 1v] [dig.5]  
+  
+  
+N.<sup>n</sup>  El mismo Dia mes y año Yo el   
+Es.<sup>no</sup> hise saver el decreto q.   
+antecede a D.<sup>n</sup> Leonardo Ma=  
+=zange doy fée___  
+  
+N.<sup>n</sup>  En dho Dia mes Y año yo el   
+Es.<sup>no</sup> hise Saver el dho decr  
+eto que antecede a D<sup>n</sup> Jaciento  
+Panis Doy fée___  
+  
+  
+[f. 2r] [dig.6]  
+  
+  
+2  
+D.<sup>n</sup> Alex.<sup>dro</sup> Bauré por mi poder en los autos q.<sup>e</sup>___   
+ha promovido contra La mulata Nanette Sobre   
+q.<sup>e</sup> le otorgue la escritura de venta de mi negra D<sup>~</sup>  
+maturine, y lo demas como mejor proceda de Dro.<sup>~</sup>   
+digo q.<sup>e</sup> esta causa es recivida a prueva, y para en par  
+te de la q.<sup>e</sup> devo dar se ha De Service V.S.<sup>a</sup> mandar   
+q.<sup>e</sup> bajo de juram.<sup>to</sup> en forma en q.<sup>e</sup> no lo difiero   
+jure y declare en primer lugar Dn Luis Dapre  
+mone, y diga como es cierto q.<sup>e</sup> fue el mismo q.<sup>e</sup> le   
+dio la libertad a mi Sollicitud, y q.<sup>e</sup> no lo huviera___   
+hecho, Si no por mi porq.<sup>e</sup> Se hallaba embaraza-  
+da y sin facultades de poder hazer una gracia exor  
+bitante.  
+  
+2.<sup>o</sup> *Item* como la dha mulata no le hizo ningun Servicio   
+particular q.<sup>e</sup> mereciesse la libertad   
+  
+3.<sup>o</sup> Item como es cierto q.<sup>e</sup> la dha libertad Se verifico q.<sup>do</sup>   
+me pidio mi hija para el matrimonio, y q.<sup>e</sup> Se la di con  
+cediendo me la instancia q.<sup>e</sup> le hize Sobre la libertad de la  
+  
+  
+[f. 2v] [dig.7]  
+  
+  
+mulata, y q.<sup>e</sup> a consequencia le he recompensa  
+do no Solo haviendo le dando mi hija condote<sup>e</sup>   
+Sufficiente, Si no tambien Sustiniendo lo en las car  
+gas De Su matrimonio,  
+  
+4.<sup>o</sup> que el mismo, y los demas testigos q.<sup>e</sup> presentara   
+bajo el propio rito declaren como escierto, publi  
+co, y notario q.<sup>e</sup> despues q.<sup>e</sup> tuvo la libertad la mu  
+lata esta une tenia hicho Su casero dando me   
+a guardar el dinero q.<sup>e</sup> Juntava haziendo confie  
+anza de hombria de bien.  
+  
+*Item* como del concubinaje de Juan Augraud=  
 haviendo este dado le dos cientos, y mas pezos, la  
-dha mulata me los dio a guardar.  
+dha mulata me los dio aguardar.  
   
-[Item] como es cierto q.e teniendo estos en mi poder  
-la dha Nanetta se fue a Pensacola con un Englez  
-q.e la protege y favorece.  
+*Item* como es cierto q.<sup>e</sup> teniendo estos en mi poder  
+la dha Nanetta Se fue a Pensacola con un Englez  
+q.<sup>e</sup> la proteges y favorece.  
   
-[Item] como es cierto q.e Luego q.e cino de Pensacola  
-me puso este pleyto.  
+*Item* como es cierto q.<sup>e</sup> Luego q.<sup>e</sup> vino de Pensacola  
+me puso este pleyto  
   
-[Item] q.e declaren la misma Naneta, y Maturine  
-como es cierto haver me oido quejar de un robo  
-q.e se me hizo en mi papelera en tiempo q.e la Maturi-  
-ne era sola en el quarto, pose q.e era la encarga-  
-da de su amo; Por tanto, y protestando estar solo  
-a lo favorable.  
+Item q.<sup>e</sup> declaren la misma Naneta, y Maturine  
+como es cierto haverme oido quejar de un robo  
+q.<sup>e</sup> se me hizo en mi papelera en tiempo q.<sup>e</sup> la maturi  
+na era Sola en el quarto, porq.<sup>e</sup> era la encarga  
+da de Su amo; Por tanto, y protestando estar Solo  
+a lo favorable  
   
-A.V.S.a  Suplico se sirva proveer , y mandar hazer dhas/  
+A.V.S.<sup>a</sup>  Suplico Se Sirva proveer, y mandar hazer dhas  
   
-[f. 3r]  
   
+[f. 3r] [dig.8]  
+  
+  
+3  
 declaraciones como pido con justicia, costas, y juro  
-no ser de mailicia, y lo necessario &.a  
+no ser de malicia, y en lo necessario &.<sup>a</sup>  
   
-Otro Si [sic] para el propio efecto se ha de servir V.S.a  
-mandar q.e la dha Nanetta declara [se] la misma   
-protesta como es cierto me dijo q.e V.S.a me ordena  
-va entregar se la negra Matuaine, la q.e no havie=  
-ra entregado, q.e [sic] obediencia, pido justicia [sic]  
-suprá_____  
-[signed:] Leonardo Mazange
-
-
-## English Translation
-
-
-Action  
+Otro Si ae para el propio efecto Se ha De Servir V.S.<sup>a-</sup>  
+mandar q.<sup>e</sup> la dha__ Nanetta declara So la misma   
+protesta como es cierto me dixo q.<sup>e</sup> V.Sa me ordena  
+va entregar le la negra Maturina, la q.<sup>e</sup> no havie-  
+ra entregado q.<sup>e</sup> qxxx obediencia, pido Justicia <u>ut_</u>  
+Suprá_____  
   
-of Sir Alexandre Boré  
+[Firmado:] Leonardo Mazange  
+  
+  
+En lo Principal y Utro Sí Juren y de_  
+claren los tgõs q.<sup>e</sup> esta parte presenta_  
+re por el tenor del pedim.to en la q.<sup>e</sup> les corres.  
+ponda Se comete y fho con la prueba_  
+  
+[Rubrica, Unzaga]   [Rubrica, Odoardo de Sayas]  
+  
+Proveyo lo el señor D.<sup>n</sup> Luis de Unzaga  
+y Amézaga Brigadier de los r.<sup>s</sup>  
+extõs Gov.<sup>or</sup> Grāl de este prov.<sup>a</sup> p.<sup>r</sup> SM  
+q. lo rubrico con su Ass.<sup>or</sup> Grāl en   
+N.<sup>va</sup> orleans a treinta de octubre  
+de mil sette Cientos sett.<sup>a</sup> y tres___  
+  
+  
+[f. 3v] [dig.9]   
+  
+  
+N.<sup>n</sup>  El mismo Dia mes y año Yo el   
+Es.<sup>no</sup> hisesaver el decreto que  
+antecede a D.<sup>n</sup> Leonardo Mazange   
+Doy fee___  
+  
+  
+N.<sup>n</sup>  En dho Dia mes y año Yo el Es.<sup>no</sup>   
+hise saver el dho decreto q antecede   
+a D<sup>n</sup> Jaciento Panis Doy fée___  
+  
+  
+Dilig.a   En la Ciudad de la N.<sup>va</sup> Orleans en  
+el mismo dia pase a la Casa De la morada  
+de D.<sup>n</sup> Luis dapremon aefecto de  
+hazer le saver la prov.<sup>a</sup> antecede.<sup>te</sup>  
+y se me enformo estar Domiciliado  
+en su hav.<sup>on</sup> y p.<sup>a</sup> q. Conete dey   
+pongo p.<sup>r</sup> Dilig.<sup>a</sup> doy fée___  
+  
+  
+[f. 4r] [dig.10]  
+  
+  
+4  
+D.<sup>n</sup> Alex.<sup>dro</sup> Bauré por mi poder en los autos  
+seguidos contra mi por Naneta mulata libre sola  
+q.<sup>e</sup> se me obligue a otorgar la escritura de venta de la  
+negra Maturina digo q.<sup>e</sup> en mis pruevas se mando recivir  
+una declaration por Dn Lüis De la lande Dápromont, y  
+q.<sup>e</sup> como consta de la Diligentia del presente Es.<sup>no</sup> tiene Su  
+morada en una habitacion por loq.<sup>e</sup> Se ha De Servir V.S.<sup>a</sup>  
+mandar librar boleta de Comparando, dentro un breve,  
+termino, Coñ apercivimiento de lo.<sup>oe</sup> ha Lugar en Drõ  
+Por tanto  
+  
+A.V.S.<sup>a</sup> Suplico se sirva proveer, y mandar como pido  
+un justicia, costas, y [juro] no ser de malicia, y en lo necesa  
+rio &.<sup>a</sup>  
+  
+[Firmado:] Leonardo Mazange  
+  
+  
+Librese la Boleta que se solicita Con term.<sup>o</sup>  
+de tercero Dia, Cometida su Yntimacion   
+aqualquiera pers.<sup>a</sup> havil___  
+  
+[Rubrica, Unzaga]  
+  
+Proveyolo el Señor D.<sup>N</sup> Luis de Unzaga  
+  
+  
+[f. 4v] [dig.11]  
+  
+  
+[círculo, moderno, a lápiz] 3  
+  
+y Amezaga Brigadier de los reales  
+Extõs Gov.<sup>or</sup> Gãl de esta prov.<sup>a</sup> p.<sup>r</sup> Su M.<sup>a</sup>  
+que lo rubrico en Nueva Orleans  
+en Dos de nobrē demil sette Cientos   
+settenta y tres a.<sup>s</sup>___  
+  
+N.<sup>n</sup> El mismo Dia mes y año Yo el Es.<sup>no</sup> hise   
+saver el decretto que antecede a D.<sup>n</sup> Leonardo  
+Mazange Doy feé.  
+  
+  
+N.<sup>n</sup> En dho Dia mes y año Yo el Es.<sup>no</sup> hise   
+saver el dho Decretto que antecede a D.<sup>n</sup>  
+Jacinto panis Doy fée___  
+  
+  
+Librosela Boleta q. se\}  
+manda doy fêe___  
+  
+  
+[f. 5r] [dig.12]  
+  
+  
+5  
+Por decreto p.<sup>r</sup> el señor  
+Gov.or Grãl De esta prov.<sup>a</sup> esta mandado   
+quequalquiera persona havil  
+notifîque a D.<sup>n</sup> Juan Luis Lalande  
+Dapremon que Comparesca antemy  
+el presente Es.<sup>no</sup> dentro de tercero  
+Dia Á hacerse Cargo de Cierta  
+Declar.<sup>N</sup> N.<sup>va</sup> orleanz y novbre<sup>~</sup>  
+dos de mil sette Cientos settenta y   
+tres años____  
+  
+  
+Estando en la habitacion de D.<sup>n</sup> Luis  
+la lande Dapremont le notifîque la   
+Boleta antecedente oy tes de  
+noviembre de 1773,   
+  
+[Firmado:] Pedro Berton[ion]  
+  
+  
+[f. 5v] [dig.13]  
+  
+  
+[en blanco]  
+  
+  
+[f. 6r] [dig.14]  
+  
+  
+6  
+[círculo, moderno, a lápiz] 4  
+  
+En la Ciudad De la Nueva Orlean  
+en tres De noviembre De mil sette  
+cientos settenta y tres anos años  
+Yoel Es.<sup>no</sup> en Virtud De la Comision  
+ami Conferida reciví Juram.<sup>tp</sup> de D.<sup>n</sup>  
+Juan Luis lalande Dapremon quien  
+bo hiso p.<sup>r</sup> Dios nrõ señor y un senal   
+de Crus seg.<sup>n</sup> Drõ e ocuyo cargo prometo  
+Decir Verdad y examinado p.<sup>r</sup> los arti  
+culos de el escrito anteced.te ACadauno   
+de ellos Dijo lo sig.<sup>te</sup>___  
+  
+1.<sup>a</sup> Ala primerara preg.<sup>ta</sup> Dixo que es  
+cierto su Continido y responde___  
+  
+2.<sup>a</sup> Ala segunda Dixo que no lo huviera  
+Dado la libertad no teniendo bastante  
+conveniencia en aquel entonces para  
+tanta liberalidad y responde y Digo q.  
+la dha Naneta no le havia hecho nig.<sup>o</sup>  
+beneficio ni servicio que mereciese su   
+libertada___  
+  
+3.<sup>a</sup> Ala tercera dixo q.<sup>e</sup> lad ha libertad se  
+Verifico ante su casam.<sup>to</sup> pero que no   
+havia tratado ya pidiendo la hia  
+  
+  
+[f. 6v] [dig.15]  
+  
+  
+de D.<sup>n</sup> Alexandro Bauré y que   
+ha sido recompensado bastante   
+p.<sup>e</sup> su suegro de dha libertad y   
+responde___  
+  
+4.<sup>a</sup> Ala quarta Dixo que es cierto su   
+contenido y responde_____  
+  
+5.<sup>a</sup> A la quinta dixo que lo Ygnora y   
+responde___  
+  
+6.<sup>a</sup> Ala sexta Dixo que escierto su   
+contenido y responde__  
+  
+7.<sup>a</sup> Que lo que ha Declarado esla verda[d]  
+en cargo desujuram.<sup>to</sup> dho y que   
+es de edad de treinta y un años y   
+firmo De que doy fée_______  
+  
+[Firmado:] Delalande Dapremont ES--  
+  
+  
+Ante My  
+[Firmado:] Juan Bt.<sup>a</sup> Garíc ES.<sup>no</sup> pub<sup>co</sup>  
+  
+  
+[círculo, moderno, a lápiz] 5  
+  
+En la Ciudad de la nueba orleans en el ~~xxxxx~~  
+~~xxx xx~~ Cinco de noviembre de mil Setecientos   
+y Setenta y tres añ<sup>os</sup> yo el Es.<sup>no</sup> en virtud de la   
+Comision a mi Conferida recevi Juramentos de   
+D.<sup>n</sup> Andrés Jung que lo hizo por dios nuestro Senor  
+y una Señal de Cruz Segun derecho Lo Cuya  
+Cargo prometed decir verdad, y Examinado  
+~~xxxxx~~ Articulos seguientez Continidos en el Escrito   
+que antecede, dixo Lo Siguiente___  
+  
+  
+[f. 7r] [dig.16]  
+  
+  
+7  
+ala 4<sup>a</sup>, Dixo que lo ignorava y Lo ignora en cado Y tipo  
+  
+ala 5<sup>a</sup>, Dixo que no Save nada de esso y responde  
+  
+  
+ala Sixta Dixo que bien Save que fue a panzacola  
+dicha mulata Con uno inglez y que volvio de  
+alla ygualmente y responde___  
+  
+  
+ala Septima Dixo que no Save nada de Lo que   
+Sepregunta y responde que lo que ha declarado   
+es la verdad Lo cargo de su Juramento hecho   
+y que es de edad de quarenta y cino años y   
+firmo de que doy fée__   
+  
+[Firmado:] Jung  
+  
+Ante My  
+[Firmado:] Juan Bt.<sup>a</sup> Garíc ES   
+ES.<sup>no</sup> pub<sup>co</sup>  
+  
+  
+[f. 7v] [dig.17]  
+  
+  
+[en blanco]  
+  
+  
+[f. 8r] [dig.18]  
+  
+  
+8  
+D.<sup>n</sup> Alex.<sup>dro</sup> Boré por mi poder en la autos  
+q.<sup>e</sup> sigue a Nanetta mulata Liberta sobre pretender q.<sup>e</sup>  
+se me obligue la escritura de venta de una   
+negra mi esclava, y lo demas Digo q.<sup>e</sup> para en parte de la   
+prueva q.<sup>e</sup> estoy dando Se ha De Servir V.S.<sup>a</sup> mandar   
+q.<sup>e</sup> Los testigos q.<sup>e</sup> presentare Juren, y declaren religiosam.<sup>te</sup>  
+por los particulares Siguientes  
+  
+Primeram.<sup>te</sup> como escierto, y les consta como Soy un vecino de  
+esta ciudad acomodado Sin empaños  
+  
+*Item* como les consta q.<sup>e</sup> soy honrado, opuesto a pleytos___  
+  
+*Item* como me conocen por hombre de bien, y q.<sup>e</sup> he vivi  
+do honestam.te en compañia de mi muger, y hija Por-  
+tanto   
+  
+A.V.S.<sup>a</sup> Suplico Se sirva mandar recivir dhas declaraciones   
+y fechas, Se entiendan con mis pruevas, q.<sup>ees</sup> Justicia q.<sup>e</sup>   
+pido con costas, Juro en frã de drõ no Ser de malicio   
+=&<sup>a</sup>  
+  
+Otro Si Se ha de Servir V.S.<sup>a</sup> mandar q.<sup>e</sup> Los testigos q.<sup>e</sup> prese  
+tara bajo el propio rita Declaren como la dha, mulata  
+  
+  
+[f. 8v] [dig.19]  
+  
+  
+Naneta es publico, y notorio q.<sup>e</sup> en la acualidad   
+Se halla a manchac Inglez con un individo de esta  
+nacion con quien Despues de liberta hace corerias   
+y con quien ha poco tiempo viene de Pensacola, q.<sup>e</sup>  
+es Justicia ut Suprá  
+  
+[Firmado:] Leonardo Mazanga  
+  
+  
+En lo Principal y Utro si Juren y  
+declaren los tgõs q.<sup>e</sup> esta parte presentare  
+por el tenor de este pedim.<sup>to</sup> se comete y fho   
+con la prueba. ___  
+  
+[Rubrica, Unzaga]   [Rubrica, Odoardo de Sayas]  
+  
+[círculo, moderno, a lápiz] 6  
+  
+Proveyolo el Señor D.<sup>n</sup> Luis de Unzaga  
+y Amezaga Brigadier de los reales  
+extõs Gov.<sup>or</sup> Grāl de esta prov.<sup>a</sup>  
+por su magestad q.<sup>e</sup> que lo rubrico con   
+el Señor Ass.<sup>or</sup> Grāl en N.<sup>va</sup> Orleanz  
+a seis De Noviembre de mil sette  
+cientos Sett.<sup>a</sup> y tres ad em.<sup>a</sup> noviembre de  
+  
+  
+[f. 9r] [dig.20]  
+  
+  
+N.<sup>n</sup> El mismo dia mes y año yo el Es.<sup>no</sup>   
+hise saver el decreto que antecede Á  
+D.<sup>n</sup> Leonardo Mazange Doy fée___  
+  
+N.<sup>n</sup> En dho Diames y años yo el Es.<sup>no</sup>  
+hise saver el dho decreto que antece  
+de a D.<sup>n</sup> Jacinto Panis Doy fêé___  
+  
+  
+[f. 9v] [dig.21]  
+  
+  
+[en blanco]  
+  
+  
+## Translation (English, modern)  
+
+[page #1] [digital 2]  
+  
+Action                  1773  
+  
+of Don Alexandre Boré  
 against  
-Naneta, free mulata   
+Naneta, mulata libre.  
+___  
+___  
   
-[Signature mark]  
+[Rubric, Almonester]  
   
 N.16  N 3808  
-#291 [modern, in blue pencil]  
-Oct 29 1773 [modern, in pencil]  
+  
+[modern, in blue pencil] #291  
+[modern, in pencil] Oct 29 1773   
   
   
-[f.0 v] BLANK  
-  
-[f. 1r]  
-  
-                                        1  
-I, Sir Alexandre Boré, by my power in the following action  
-against me by Naneta, free mulata, concerning the liberty  
-of my negro, Maturine, call into evidence in this case,  
-and I give my service to His Lordship that he should  
-grant me ten days more time [if God wills]  
-  
-To His Lordship, I beg you to provide and command what I have asked in fairness, and without malice, and as is necessary.  
-Leonardo Mazanga [signed]   
+[p. #2] [dig.3]  
   
   
-#291 [modern, in blue pencil]  
+[BLANK]  
   
+  
+[p. #3] [dig.4]  
+  
+  
+1  
+I, *Don* Alexandre Boré, by my power in the following action against me by Naneta, *mulata libre*, concerning the liberty of my *negra*, Maturine, call into evidence in this case, and Your Honor must order that ten days more time be granted me, thusly.  
+  
+  
+To His Lordship, I beg of you to provide and order what I have asked with due justice, and I swear to be without malice, and in which way as necessary, etc.  
+  
+[Signed:] Leonardo Mazange  
+  
+  
+[modern, in blue pencil] #291  
 A Common Request  
-[signature]  
   
-1  I provide to the Lord Sir Luis de Unzaga  
-y Amezaga, Royal Brigadier General,   
-Governor General of this Province, that which I sign in  
-New Orleans on the 29th of October,  
-1773.  
+[Rubric, Unzaga]  
   
-[f. 1v]  
+[circled, modern, in pencil] 1  
   
-On the same day, month, and year I,   
-the notary of this court, made known the decree  
-which precedes to Sir Leonard Ma-  
-zange. I certify.  
-  
-On the aforementioned day, month, and year I,   
-the notary of this court, made known the decree  
-which precedes to Sir [Jaciento]  
-Panis. I certify.  
-  
-[f. 2r]  
-  
-                                        2  
-I, Sir Alexander Boré, by my power in the following action that has been brought against me by the Mulata Nanette regarding the granting of a deed of sale of my negro woman called Maturine, and the rest which best procedes by law   
-calling into evidence in this case, and to which   
-end I give my service to His Lordship granted that   
-I swear under oath and do not deviate  
-from my original testimony. Sir Luis Dapre-  
-mont, I am certain this was the same one that it was  
-requested of me to give freedom, and that I did not  
-do so, not for me but [for her] because she was pregnant  
-and without the ability to receive [God’s] extravagant grace.  
-  
-2. [Likewise] The said mulata has given no service   
-extraordinary [enough] to have deserved her freedom.   
-  
-3. [Likewise] As it is true that the same liberty I verify   
-my daughter asked of me for her marriage, and gave her this, granting the request asked of me concerning freedom for the  
-[f. 2v]  
-  
-mulata, consequently that I have rewarded [Dapremont]   
-not only by giving him my daughter but also with a dowry  
-sufficient enough to sustain him in the  
-burdens of his marriage.  
-  
-4. That he himself, and the other testimonies that he presents under his own rite, declare as true, open,   
-and notarized, that after she received freedom, the mu-  
-lata is the one who had made her [chequer] give me   
-to keep the money, which I collected, making trust  
-of a good man.  
-  
-[Likewise] As to the concubine of Juan Augsaud   
-having given some two hundred and more pesos, the   
-said mulata gave them to me to keep.  
-  
-[Likewise] As it is true that having these in my possession  
-the said Naneta went to Pensacola with an Anglo  
-who protects and favors her.  
-  
-[Likewise] As it is true that [it was] after I came from Pensacola that he bound me in this lawsuit.  
-  
-[Likewise] Let Naneta herself testify, and Maturine,   
-as it is true, having heard me complain of a theft  
-that was done to my paperwork at a time in which Maturi-  
-ne was alone in the room, since she was attending  
-to her master; thusly, and remonstration is the only  
-thing fair.   
-  
-I beg you to provide, and order you to said  
+Thus ordered: [By] the Lord *Don* Luis de Unzaga y Amezaga, Brigadier General of the Royal Armies, Governor General of this Province, which is signed in New Orleans on the 29th of October, seventeen-hundred and seventy-three.  
   
   
-Statements as I ask with justice, costs, and to not be malicious, and what is necessary to  
+[p. #4] [dig.5]  
   
-Another if for its own effect it must be useful to his Lordship to order that the said Nanetta declare the same protest as is true she told me that his Lordship orders me to turn in the black Matauine, the one who would not submit, with[sic] obedience, I ask for justice [sic] above  
   
-Leonardo Mazange
+Notarized: On the same day, month, and year, I, the notary, made known the decree which precedes to *Don* Leonard Mazange. I attest.  
+  
+Notarized: On the aforementioned day, month, and year, I, the notary, made known the decree which precedes to *Don* Jacinto Panis. I attest.  
+  
+  
+[p. #5] [dig.6]  
+  
+2  
+I, *Don* Alexandre Boré, by my power in the actions that have been brought against me by the *mulata*, Naneta, regarding the granting of a Deed of Sale of my *negra* called  Maturine, and the rest which best proceeds by law, I call into evidence in this case, and to which  end Your Honor had ordered granted, that I swear under oath and do not deviate from my original testimony as declared in the first place [about] *Don* Luis D'Apremont, and say it is true that this was the same one [esclava] that it was requested of me to give freedom, and that I did not do so, if not for me [but for her] because she was pregnant and without the ability to receive [God’s] extravagant grace.  
+  
+2. Likewise, the said *mulata* has given no service extraordinary [enough] to have deserved her freedom.   
+  
+3. Likewise, as it is certain that this is the said liberty, I verify, my daughter asked of me for her marriage, and that I gave,granting the request asked of me concerning freedom for the  
+  
+  
+[p. #6] [dig.7]  
+  
+  
+*mulata*, consequently that I have rewarded [D'Apremont] not only by giving him my daughter but also with a dowry sufficient enough to sustain him in the burdens of his marriage,  
+  
+4. that he himself, and the other witnesses that he presents under his own rite, declare as true, open, and notarized, that after [she] received freedom, the *mulata* is the one who had made her patron give me the money to save, which I collected, making trust of a good man.  
+  
+Likewise, as to the concubine of Juan Augraud, having been given some 200 or more *pesos*, the said *mulata* gave them to me to keep.  
+  
+Likewise, as it is true that having these in my possession the said Naneta went to Pensacola with an Anglo [man] who protects and favors her.  
+  
+Likewise, as it is true that [it was] after I came [back] from Pensacola that she bound me [up] in this lawsuit.  
+  
+Likewise, that Naneta herself declare, and Maturine, how it is true, having heard me complain of a theft that was done to my writing desk at a time in which Maturine was alone in the room, because she was attending to her master. Thusly, remonstration [of my legal rights] is the only thing fair.    
+  
+I beg you to provide and order the above mentioned  
+  
+  
+[p. #7] [dig.8]  
+  
+  
+3  
+statements [of rights] as I ask, with due justice, and I swear not to be of malice, and as is necessary, etc.  
+  
+And also, if it serves His Lordship, to order that the said Naneta declare the same remonstration, [if] it is true as was told to me, that His Lordship [shall] order me to turn in the *negra*, Maturine, whom would not submit in obedience. I ask for justice, as [cited] above,  
+  
+  
+[Signed:] Leonardo Mazange  
+  
+In [this] principal and [all] other matters, sworn and declared [by] the witnesses present for the purpose of this petition for which they are responsible, is filed and dated [along] with the evidence.  
+  
+[Rubric, Unzaga]   [Rubric, Odoardo de Sayas]  
+  
+Thus ordered: [By] the Lord *Don* Luis de Unzaga y Amézaga, Brigadier General of the Royal Armies, Governor General of this Province by His Majesty, which is signed with the Advisor General in New Orleans on [the] 30th of October of seventeen-hundred and seventy-three.   
+  
+  
+[p. #8] [dig.9]  
+  
+  
+Notarized: [On] the same day, month, and year, I, the notary, made known the decree that precedes to *Don* Leonardo Mazange. I attest.  
+  
+Notarized: On the same day, month, and year, I, the notary, made known the decree that precedes to *Don* Jacinto Panis. I attest.  
+  
+Proceedings: In the City of New Orleans, on the same day, I went to the house of residence of *Don* Luis D’Apermont with the intent of  making him aware of the preceding decree, and I was informed [that] he was residing at his plantation, and so that he is made aware, I left a copy of the decree. I attest.  
+  
+  
+[p. #9] [dig.10]  
+  
+  
+4  
+*Don* Alexander Boré, by my power in the following proceedings against me by the *mulata libre*, Naneta, unmarried, in which I am forced to grant the Deed of Sale of the *negra*, Maturina, I say that my testimony was sent to receive a statement by *Don* Luis Delalande D’Apromont and, as is evident by the proceedings of the present notary, he has stayed in his dwelling on the plantation, so Your Lordship must order a summons be issued within a brief period with warning as to what is required [of him] by law, thusly.  
+  
+To Your Lordship, I beg you to provide and order what I have asked with due justice, and I swear I do not proceed with malice, and in the way necessary, etc.   
+  
+  
+[Signed:] Leonardo Mazange  
+  
+  
+The requested orders [shall be] released by the end of the third day after the summons has been served by a qualified person.   
+  
+[Rubric, Unzaga]  
+  
+Thus ordered: [By] the Lord *Don* Luis de Unzaga  
+  
+  
+[p. #10] [dig.11]  
+  
+  
+[circled, modern, in pencil]  3  
+  
+y Amezaga, Brigadier General of the Royal Armies, Governor General of this Province by His Majesty, having signed in New Orleans on 2 of November seventeen-hundred seventy-three years.  
+  
+Notarized: [On] the same day, month and year, I, the notary, made known the decree that precedes to *Don* Leonardo Mazange. I attest.  
+  
+Notarized: On the said day, month, and year, I, the notary, made known the said decree that precedes to *Don* Jacinto Panis. I attest.   
+  
+The summons has been released as ordered. I attest.   
+  
+  
+[p. #11] [dig.12]  
+  
+  
+5  
+By decree of the Lord Governor General of this Providence, it is ordered that a qualified person notify *Don* Juan Luis Delalande D'Apremont to appear before me, the present notary, within three days, to make [his] oath [and] truthfully [provide his] testimony. [In] New Orleans, and [on] November 2nd of seventeen-hundred and seventy-three years.   
+  
+Being at the plantation of *Don* Luis [De]lalande D'Apremont, I notified him of the proceeding summons, today on the 3rd of November of 1773,   
+  
+[Signed:] Pedro Bertonniere  
+  
+   
+[p. #12] [dig.13]  
+  
+  
+[blank]  
+  
+  
+[p. #13] [dig.14]  
+  
+  
+6  
+[circled, modern, in pencil] 4  
+  
+In the City of New Orleans on the 3rd of November of seventeen-hundred seventy-three years, I, the notary, by virtue of the commission conferred to me, received the oath of *Don* Juan Luis [De]lalande D'Apremont, who did so by God Our Lord and a sign of the Cross, according to the law, and [he] swears to tellthe truth, and being made aware of the contents of the previous petition, to each one of them says the following:  
+  
+1. To the first question, he said that its content is true, and [in] response   
+  
+2. To the second, he said that he would not have given her freedom as it would have not given himm uch convenience at the time for such disposal of assets and had in response said that the aforesaid Naneta had not provided any service or benefit worthy of her liberty.  
+  
+3. To the third, he said that the said liberty was verified before his marriage, but that he had yet to ask for that of the daughter   
+  
+  
+[p. #14] [dig.15]  
+  
+  
+of *Don* Alexandre Boré, and that he has been compensated enough by his father-in-law of said liberty, and responds  
+  
+4. To the fourth, he said it was right in its content, and in response  
+  
+5. To the fifth, he said he doesn't know, and in response  
+  
+6. To the sixth, he said it was right in its content, and in response  
+  
+7. To that what he has declared, it is true in accordance with his spoken oath, and that he is 31 years old, and he signed. I attest.  
+  
+[Signed:] Delalande D'Apremont, Esq.  
+  
+  
+Before me  
+[Signed:] Juan Baptista Garic, Notary Public   
+  
+  
+[circled, modern, in pencil] 5  
+  
+In the City of New Orleans on the 5th of November of seventeen-hundred and seventy-three years, I, the notary, by virtue of the commission conferred upon me, received statements from *Don* Andrés Jung, who swore to the truth by our Lord God and the sign of the Cross, in accordance with the law, whose responsibility it is to tell the truth, and being made aware of the following articles in continuation from the statement which precedes, said as follows:  
+    
+  
+[p. #15] [dig.16]  
+  
+  
+7  
+To the fourth, he said that he was unaware and unaware of the case and type [of civil case].  
+  
+To the fifth, he said he does not know anything of this, and in response  
+  
+To the sixth, he said that he knows that the said mulata went to Pensacola with an Englishman and that she came back from there just the same, and answers  
+  
+To the seventh, he says he did not know anything of what he is asked, and answers that what he has stated is the truth in accordance with his oath made, and that he is 45 years old and signed as such. I attest.     
+  
+[Signed:] Jung  
+  
+  
+Before me  
+[Signed:] Juan Baptista Garic, Esq.  
+Notary Public  
+  
+  
+[p. #16] [dig.17]  
+  
+  
+[blank]  
+  
+  
+[p. #17] [dig.18]  
+  
+  
+8  
+*Don* Alexander Boré, by my power in these proceedings which follows Naneta, *mulata libre*, trying to force me into writing the Deed of Sale of a *negra*, my *esclava*. And for the rest I say that part of the proof that I am giving must serve, Your Lordship, to order the witnesses presented to swear [an oath] and testify religiously  of the following particulars:  
+  
+First of all, it is true, and as they know, I am a property owner of this city without a tarnished reputation.  
+  
+Likewise, you are aware I am honorable, averse to lawsuits.  
+  
+Likewise, I am known as a good man, and to have lived honestly in the company of my mother and daughter, thusly.  
+  
+Your Lordship, I beg you order the above notarized statements to be known alongside my evidence, it is justice that I ask, with indebtedness, I swear in conformity with the law to not be of malice, etc.   
+  
+  
+And if it serves His Lordship, order that the witnesses will present [themselves] under his authority and testify about the said *mulata*,  
+  
+  
+[p. #18] [dig.19]  
+  
+  
+Naneta, [who] is well known and notorious, that currently is at English Manchac with an individual of this nation with whom, after liberation, she goes on raids with and with whom she came from Pensacola a short time ago, which is rightly stated above.  
+  
+[Signed:] Leonardo Mazange  
+  
+  
+In this primary and [all] other matters sworn and declared [by] the witnesses present for the purpose of this petition are filed and dated [along] with the evidence.  
+  
+[Rubric, Unzaga]   [Rubric, Odoardo de Sayas]  
+  
+[circled, modern, in pencil] 6  
+  
+Thus ordered: [By] the Lord *Don* Luis de Unzaga y Amezaga, Brigadier General of the Royal Armies, Governor General of this Province by His Majesty, which is signed withthe Lord Advisor General in New Orleans on the 6th of November seventeen-hundred and seventy-three on the aforesaid November.   
+  
+  
+[p. #19] [dig.20]  
+  
+  
+Notarized: on the same day, month, and year, I, the notary, made known the decree which precedes to Don Leonardo Mazange. I attest.  
+  
+Notarized: On the said day, month, and year, I, the notary, made known the said decree which precedes to *Don* Jacinto Panis. I attest.  
+  
+  
+[p. #20] [dig.21]  
+  
+  
+[blank]
