--- a/_keywords/excerpts/d0326.md
+++ b/_keywords/excerpts/d0326.md
@@ -1,228 +1,247 @@
-## Spanish Transcription  
-
-[folio 19 recto] (digital 2) 
-
-[Marginalia:]
-
-27 no^bre 1770
-Venta
-Genoveva 
-Junon
-a
-Maria Juana 
-Negra
-
-[Rubrica, Garic]
-
-(10806.)
-
-[Cuerpo:]
-
-(97309.)
-
-                                                     19
-En La ciudad del Nubo Orleans y noviembre
-veinte y siete de mil setecientos y setenta ans ante
-mi Escribano P.^co porcuid[.] Genoveva Junon negra 
-Libre vecina de esta ciudad quien dijo que ottorga que 
-y da en venta real para siempre Y mas a maria 
-Juana negra libre vezina tambien de Esta ciudad 
-y a quien sus derechos representare trinta pies de
-un Solar de frente sobre el fondo que puede tener 
-puestos en la calle de S.^ta Ursula Lindada de un 
-Laso de la ottorgante y del otro al terreno de la  
-sucession del difunto D.^n Joseph des Ruissoux conto= 
-=dos susezos costumbres y servidumbres y todo lo
-demas que le pertenece puede pertenecer de fecho y 
-de derecho Libre de tributo memoria hipoteca ni otra 
-cargo senorío ni obligacion eSpecial ni Général y 
-por tal Se da assegura por precio de cinquenta pes=
-=sos fuertes de la qual cantidad se me ha pagado 
-Veinte y cinco pessos de contado, y las vente y cinco 
-restantes deudan pagar se me al veinte y siete 
-de no.^bre mil setecientos y setenta y uno de que se satisface y da por entregado de los veinte y cinco
-pessos y aununcio a Las Leyes De La non numerata
-pecunia ni a intrega a prueba y ottorga recivo
-in forma y declara que el Justto valor del dicho
-Solar son las dichas cinquenta pessos y del que mas 
-puede tener en qualquiera forma y cantidad Le haza
-gracia y donacion peuro perfecto y a eabado a la dhaL
-cumprodora intervivos con intimación y Renuncia
-La Ley del ordenamien^to real fecha LaS cortas de alcal[a]
+# Summary   
+Two free Black women, Genoveva Junon and Maria Juana, arbitrate the sale and possession of legal title to a plot of land, inclusive of thirty feet of building frontage on which merchant stalls can be placed, on *Calle del Arsenal de las Ursulinas* (St. Ursulines Ave.) in the French Quarter. This document gives us insight into the merging of French and Spanish property laws in colonial Louisiana under Spanish dominion, as well as the rights of free people of color under that law.
 
 
+[Transcription](#transcription-(Spanish,-diplomatic))  
+[Translation](#translation-(English,-modern))  
+[Notes](#notes
 
+## Transcription (Spanish, diplomatic)  
 
-
-[Rubrica, Forstall]
-
-
-[f.19 verso] (dig.3)
-
-[Marginalia:]
-
-(97310.)
-
-[Cuerpo:]
-
-de henores y los quatro ans por repetir el ingano
-y las demas leyes que con ella concuerdan y desde
-oy de adelante la ottoro ante se de su poder desiste
-y aparte de la accion propriedad denoris y posse=
-sseion titulo vosy recurro y otro qualquiera derecho\que le pertenesea al dho solar y todo illo lo\anuncia y traspassa en la dha Maria Juana
-comprador y en quin sucediere en su derechos para
-que como propia suya la possé goze cambié y 
-Enagené a su coluntad como dueña [sic Mulata] sin
-dependencia alguna y le da poder el que sequiere constituindo la en Su lugar mismo y en 
-su [fubo] y causa propia para que por su autoridad
-o judicialente y apretenda possession y tenencia \del dho solar y se obliga a la evicion seguridad
-y saneomiento de esta venta en tal manera
-que de qualquera plieto debate o distrerencia que 
-sobre ella fuere movido los seguira y destendza 
-a sus costas hasta dejarle en queta possession
-osino Le Bolvere los dhos cinquenta pessos las labores y aumentos que ubiera echos sobre dho solar, y el mas valor adquirido con el tiempo y los daños y costas 
-que se le siquieren y quiere que Se le execute consolo su Juramento en que lo difiere y haviendo tambien
-paresido Maria Juana cumpradora que ha sido
-presente a todo lo dicho dijo que accepto esta
-Escritura en todo ê por todo ê segun y como se ha
-referido y recive en esta venta el dho solar en cuya
-propiedad y possession le da por entregrada a 
-
-[Rubrica, Forstall]
-
-
-[f. 20 r] (dig.4)
-
-[Marginalia:]
-
-(97311.)
-
-[Cuerpo:]
-
-                                                         20
-Su voluntad, y anuncio las Leyes de la Entrega
-ê prueba ê por esta se obliga de pagar a la dha
-attorgante los viente y cinco pessos restantes en 
-el plazo assignado, y por la firmesa de esta
-escritura ambas partes por Lo que a cada una
-le toca obligan sus personas y bienes avisos y 
-por saver, y La cumpradora obliga specialm.^te 
-dho solar. Sin que la obligacion gral perjudi=
-que a La Especial ni la una a la otra. sin que
-pueda ser vendido Primero que no se accabe y 
-finalize el pagamiento, y dan poder a las
-justicias para que Los apremian [at] cumplim^to 
-de esta cada uno por lo que le toca, como si fuera\sentencia definitiva de sus competente passada
-en coza jusgada y por ellas consentido, y renuncian
-Las Leyes de Su favor La Grãl en forma En testi=
-=monio de que ottorgan la presenti siendo testigo
-D.^n Fran.^co Goudeau D.^n Luis Liotau D.^n Salomon=
-moline[z], vexinos de esta ciudad, y no saviendo
-Las partes fimar La hizieron por Genoveva
-Junan D.^n Fran.^co Goudeau unos de los testigos y 
-por maria Juana D.^n Luisliotau otro testigo[o] de
-que yo Es^no doy feé que conosco_
-
-Por Genoveva Junon,
-[Firmado:] Fran.^co Goudeau
-
-Por maria Juana
-[Firmado:] Louis Liotau [Rubrica, Liotau]
-
-
-[f. 20 v] (dig.5)
-
-BLANCO
-
-
+[folio 19 recto] [digital 2]   
   
-## English Translation  
   
-[page # 1] (digital 2)
+[Marginalia:]   
+  
+27 no<sup>bre<sup> 1770  
+  
+Venta  
+  
+Genoveva   
+Junon  
+a  
+Maria Juana   
+Negra  
+  
+[Rubrica, Garic]  
+  
+(10806.)  
+  
+[Cuerpo:]  
+  
+                                (97309.)       19  
+  
+  
+En La ciudad del Nubo Orleans y noviembre  
+veinte y siete de mil setecientos y setenta ans ante \  
+mi Escribano P.<sup>o</sup> porcuid Genoveva Junon negra   
+Libre vecina de esta ciudad quien dijo que ottorga que   
+y da en venta real para Siempre Y mas a maria   
+Juana negra libre vezina tambien de Esta ciudad   
+y a quien Sus derechos representare trinta pies de  
+un Solar[^i] de frente Sobre el fondo que puede tener   
+puestos en la calle de S.<sup>ta</sup> Ursula Lindada de un   
+La So de la ottorgante y del otro alterreno de la    
+sucession del difunto D.<sup>n</sup> Joseph des Ruissoux conto=   
+=dos Susezos costumbres y Servidumbres y todo lo  
+demas que le pertenece puede pertenecer de fecho y   
+de derecho Libre de tributo memoria hipoteca ni otra   
+cargo Senorío ni obligacion Special ni Général y   
+portal Se Da assegura por precio de cinquenta pes=  
+=sos fuertes de la qual cantidad Se me ha pagado_   
+veinte y cǐnco pessos de contado, y Las vente y cinco   
+restantes deudan pagar Se meal veinte y Siete  \  
+de No.<sup>bre</sup> mil Setecientos y Setenta y uno de que Se   
+Satisface y da por entregado de Los veinte y cinco  
+pessos y aununcio a Las Leyes De La non numerata  
+pecunia nia intrega ã prueba y ottorga recivo  
+in forma y declara que el Justto ivalor del dicho__  
+Solar son las dichas cinquenta pessos y del que mas   
+puede tener en qual<sup>al</sup>quiera forma y cantidad Le haza  
+gracia y donacion peuro perfecto y'a eabado a la dhal  
+cumprodora intervivos con intimación y Renuncia  
+La Ley del ordenamien<sup>to</sup> real fecha Las cortas de alcal[a]  
+  
+—[Rubrica, Forstall]—  
+  
+  
+[f. 19 verso] [dig.3]  
+  
+  
+[Marginalia:]   
+  
+(97310.)  
+  
+  
+[Cuerpo:]   
+  
+de henores y los quatro ans para repetir el ingreso  
+y Las demas Leyes que con ella concuerdan y desde  
+oy de adelante La ottoro ante Sede Supoderdesiste  
+y aparte de la accion propriedad Senoris y posse=  
+sseion titulo vosy recurso y otro qualquiera derecho  
+que Le pertenesea al dhõ solar y todo illo Locedo  
+anuncia y traspassa en la dhã Maria Juana  
+comprador y en quin sucediere en su derechos para  
+que como propia Suya La possé goze cambié y   
+Enagene a Su voluntad como dueño del solar dor Sin  
+dependencia alguna y Le da poder el que le   
+se quiere Constituindo la en Su Lugar mismõ y en   
+Su fielo y causa propia para que por Su autoridad  
+ô judicialen<sup>te</sup> y a pretenda possession y tenencia   
+del dhô Solar y Se obliga a la evicion seguridad  
+y saneomiento de esta venta en tal manera  
+que de qualquera plieto debate o distrerencia que   
+Sobre ella fuere movido los Seguira y destendza   
+a Sus costas hasta de jarle en queta possession__  
+osino Le Bolvere Los dhos cinquenta pessos Las Labores   
+y aumentos que ubiera echos Sobre dhô Solar, y el mas   
+valor adquirido con el tiempo y Los daños y costas   
+que Se Le Siquieren y quiere que Se Le execute consolo   
+Su Juramento en que Lo difiere y haviendo tambien  
+paresido maria Juana cumpradora quz ha Sido  
+presente a todo lo dicho dijo que accepto esta  
+Escritura e todo ê portodo ê segun y como Se ha  
+referido y recive en esta venta el dhô Solar én Cuya  
+propiedad y possession Le da por entregrada a   
+  
+—[Rubrica, Forstall]—  
+  
+  
+[f. 20r] [dig.4]  
+  
+  
+[Marginalia:]   
+  
+(97311.)  
+  
+  
+[Cuerpo:]  
+  
+                                     20</p>  
+  
+Su voluntad, y anuncio las Leyes De La Entrega  
+ê prueba ê por esta Seobliga de pagar a La dhâ  
+attorgante Los vientey cinco pessos restantes en   
+el plazo assignado, y por la firmesa de esta  
+escritura ambas partes por Lo que a cada una  
+le toca obligan sus personas y bienes avisos y   
+por Saver, y La cumpradora obliga specialm.<sup>te</sup>   
+dhô Solar. Sin que La obligacion gral perjudi=  
+=que a La Especial ni La una a la otra, Sin que  
+pueda Ser vendido Primero que no Se accabe y   
+finalize el pagamiento, y dan poder a Las___  
+Justicias para que Los apremian cumplim.<sup>to</sup>   
+de Esta cada uno por lo que le toca, como Si fuera  
+Sentencia definitiva de Sus competente passada  
+en coza Jusgada y por ellas consentido, y renuncian  
+Las Leyes de Su favory La Grãl en forma Entesti=  
+=monio de que ottorgan la presentte Siendo testigo  
+  
+D.<sup>n</sup> Fran.<sup>co</sup> Goudeau D.<sup>n</sup> Luis Liotau D.<sup>n</sup> Salomon=  
+  
+=molinez, vezinos de esta ciudad, y no Saviendo  
+  
+Las partes firmar La hizieron por Genoveva  
+  
+Junan, D.<sup>n</sup> Fran.<sup>co</sup> Goudeau unos de los testigos y   
+por maria Juana D.<sup>n</sup> Luis liotau otro testigos de  
+que yo Es.<sup>no</sup> doy feé que conosco___  
+  
+Por Genoveva Junon,  
+  
+[Firmado:] Fran.<sup>co</sup> Goudeau  
+  
+Por maria Juana  
+  
+  
+[Firmado:] Louis Liotau [Rubrica, Liotau]  
+  
+  
+[f. 20v] [dig.5]  
+  
+  
+[en blanco]  
+  
+  
+## Translation (English, modern)      
+  
+  
+[page #1] [digital 2]  
+  
+  
+[Marginal note:]   
+  
+27 November 1770  
+Sale  
+[by] Genoveva  
+Junon  
+to  
+Maria Juana,  
+  
+*Negra*  
+  
+[Rubric, Garic]  
+  
+(10806)  
+  
+[Body:]  
+  
+In the City of New Orleans on November   
+twenty-seven, seventeen-hundred and seventy, before  the notary public for the city, Genoveva Junon, *negra libre,* homeowner of this city, I state that I grant that which is to be sold in perpetuity to Maria Juana, *negra libre* and also homeowner of this city, and to whom rights are drawn-out, [for] thirty feet of  *un solar* of building frontage on which can be placed stalls on St. Ursuline Ave., bordered on one side by the granter [Junon] and on the other land [belonging] to the succession of the deceased *Don* Joseph des Rouissoux, with all its mores and easements and everything else that belongs to it, to hold *de facto* and *de jure*, free of estate tax, *hypothèque*[^ii]] or other  seigneurial charge, nor special or general obligation, and [that] portability is assured for the price of fifty *pesos* *fuertes* [or one *real de a ocho*], of which amount I have been paid twenty-five *pesos* in cash, and the twenty-five remaining [*pesos*] debt will be paid to me on the twenty-seventh of November seventeen-hundred and seventy-one, by which is satisfied, with the committed twenty-five *pesos*, and I make notice, [according] to the non-numerary pecuniary laws [of succession], proof of surrender, and grant receipt in [customary] form, and declare that the just value of the *solar* is the said fifty *pesos,* of which [obligations]  
+are contracted regardless of form and quantity, as it pleases the aforesaid buyer, and [is] placed into living trust [for any legitimate beneficiaries] with [quitclaim] deed of surrender according to the law [as set forth under] the Royal Ordinance of *Alcalá*  
+  
+—[Rubric, Forstall]—  
+  
+  
+[p. #2] [dig.3]  
+  
+  
+[Marginal note:]   
+  
+(97310)  
+  
+  
+[Body:]   
+  
+*de Henares*, and four years recurring revenue, and other statutes which with she is accorded, and that from today forward [she] is granted under her power, [that which I] abandon claim [to], apart from [this] senior ownership action [*hypothèque*], possession [of] title, recourse, and any other rights that pertain to the aforementioned plot, and I cede everything, proclaim and transfer in the [name of] the aforesaid Maria Juana, buyer, to whom shall succeed rights so that she can as her own enjoy, exchange, and   
+dispose of at will as owner of the development, without any dependency, and on her power as she wantsconstituted there in her same place, infaith and proper cause by her authority or judgment, and claim possession and tenure of the said plot, is obliged to security inspection  and sanitation of this purchase in such a manner that any plight, complaint, or disturbance that arises over it be actuated, easing her costs until it [the property] leaves her possession,or else she shall return the aforementioned fifty *pesos*, [and] the [costs of any] labor and improvements that had been completed on the aforementioned *solar*, and the increase [in] value [which has] appreciated over time, as well as [any] damages and costs that follow [from] it, and [she] wants that it is executed with only her oath, to which she defers, and having also appeared Maria Juana, buyer, that has beenpresent to all [that has been] said, [she] has said that she accepts this deed in full in accordance with how it [has been] related and received in the sale of the said *solar* on whose ownership and possession [she] deems delivered to   
+  
+—[Rubric, Forstall]—  
+  
+  
+[p. #3] [dig.4]  
+  
+  
+[Marginal note:]   
+  
+(97311)  
+  
+  
+[Body:]  
+  
+                                        20  
+  
+  
+her will, and announces by the Laws of Surrender evidence that she is obliged to pay the aforesaid guarantor the remaining twenty-five *pesos* within the assigned time limit, and by the signature of this deed, both parties, as far as each are concerned, bind their persons and assets, as they acknowledge, and the buyer specifically is obliged the aforementioned plot of land [*solar*] without the general obligation [bond] being prejudiced by the special assessment [bond], or one to the other, without which the sale cannot be made. Firstly, [in that if] the payment is not completed and finalized, [thus] they [would] empower the judges so that they may compel compliance [and fulfillment] of this, each of their part, as it were, definitive of their competent judgment in past adjudicated matters, and by them are consented, and renounce [quitclaim][according to] the Laws of Favor, and [in] the general form, in which testimony they grant [all of] the proceedings, before the witnesses named *Don* Francisco Goudeau, *Don* Luís Liotau, and *Don* Salomon Molinez, homeowners in this city, and [whom] have no prior knowledge of either party. [It has been] done and concluded by Genoveva Junon, *Don* Francisco Goudeau, two of the witnesses, and by Maria Juana, *Don* Luis Liotau, [and] the other witness of whom I, the public notary, attest and recognize.  
+  
+For Genoveva Junon,  
+  
+[Signed:] Francisco Goudeau  
+  
+For Maria Juana,  
+  
+[Signed:] Louis Liotau [Rubric, Liotau]  
+  
+  
+[p. #4] [dig.5]  
+  
+  
+[blank]  
+  
+## Notes  
 
-[Marginal note:]
+[^i]: A *solar* is the Spanish colonial term for an allotment of land that has not yet been built upon. The expectation was that the lot would be built or improved upon, and was usually a condition of rental or sale. If construction did not take place within a specific period of time the owner could lose their rights to the *solar*. The term evolved in Cuba to also mean a “shantytown” dwelling, usually within an urban place.  
+  
+[^ii]: Under the French colonial system of property law, an *hypothèque* was a debt instrument which allowed the owner of a property to collateralize their assets in order to secure a loan. While similar to an English mortgage, the *hypothèque *remained legally distinct. The title of collateral of the *hypothèque *belonged to the borrower, not to the lender, and *liens *were placed solely on *biens immeubles*, or immovable property. Accordingly, enslaved people were classified as *biens meubles*, or movable property, and could not be seized from an enslaver for defaulting on the *hypothèque *agreement. For more on this system, see Gregory Smaldone, "Don't Call it a Mortgage: The Perils of Translation in Early Modern Economy," *Age of Revolutions *(October 9, 2023), and in French Louisiana specifically, Vernon Palmer, “The Origins and Authors of the Code Noir,” *Louisiana Law Review *56, no. 2 (Winter 1996): 363-407.  
 
-27 November 1770
-Sale
-Genoveva
-Junon
-to
-Maria Juana
-Negra
-
-[Rubric, Garic]
-
-(10806)
-
-[Body text:]
-
-(97309)
-
-                                                     19
-In the city of New Orleans on November 
-twenty-seven, seventeen hundred and seventy, before 
-the notary public for the city, Genoveva Junon, free negra, homeowner of this city, I state that I grant 
-that which is to be sold in perpetuity to Maria 
-Juana, free negra and also homeowner of this city,
-and to whom rights are drawn-out, [for] thirty feet of 
-a lot of building frontage on which can be placed 
-stalls on St. Ursuline Ave., bordered on one side by the granter [Junon] and on the other land [belonging] to the 
-succession of the deceased Don Joseph des Rouissoux, with all its mores and easements and everything else
-that belongs to it, to hold de facto and 
-de jure, free of estate tax, mortgage or other 
-seigneurial charge, nor special or general obligation, and
-[that] portability is assured for the price of fifty pesos 
-fuertes [or one real de a ocho], of which amount I have been paid
-twenty-five pesos in cash, and the twenty-five
-remaining debt will be paid to me on the twenty-seventh
-of November seventeen hundred and seventy-one, by 
-which it is satisfied, with the committed twenty-seven
-pesos, and I make notice, [according] to the non-numerary pecuniary laws [of succession], proof of surrender, and grant receipt in [customary] form, and declare that the just value of the lot is the said fifty pesos, of which [obligations]
-are contracted regardless of form and quantity, as it pleases the aforesaid 
-buyer, and placed into living trust [for any legitimate beneficiaries] with [quitclaim] deed of surrender 
-according to the law [as set forth under] the Royal Ordinance of Alcalá
-
-[Rubric, Forstall]
-
-
-[p. # 2] (dig.3)
-
-[Marginal note:]
-
-(97310)
-
-[Body text:]
-
-de Henares, for the repeating four years 
-the deception and other laws that, with it, affirm and 
-Give forward the other before his/your power said
-And set aside from the shares owned [señores/denoris]
-And possession of your title and resource and other right that pertains to the aforementioned solar and all this announces and transfers to the aforementioned Maria Juana, buyer and in whom will succeed in her rights so that what she possesses and enjoys as her own, I have changed and [Enagené] to her will as the owner [sic Mulata] without any dependence and empower her to continue representing it in its same place and in its [fubo] and cause so that by her authority or judicial and tight possession and tenure of the aforementioned solar and is obliged to the inspection of security and sanitation of this purchase in such a manner that any plight, complain/debate, or disturbance that 
-Above her were moved following and easing her costs until it leaves her possession
-Or else she will return the aforementioned fifty pesos, the labor and increases that had been completed on the aforementioned solar, and the greater value accumulated over time as well as damages and costs that follow it and want that its executed only by its oath in which she differs and having also similar Maria Juana, buyer, that has been present to all said, has said that she accepts this 
-document/writing in full following and how it refers and receives in this purchase of the aforementioned solar on whose property and possession is given by submission to 
-
-[Rubric, Forstall]
-
-
-[p. # 3] (dig.4)
-
-[Marginal note:]
-
-(97311)
-
-[Body text:]
-
-                                                         20
-her will, I announce by the provision of the contract of the delivered and evidence that she is obliged to pay the aforementioned grantor the remaining twenty-five pesos within the assigned time limit, and by the signature of this deed both parties are obliged what each one has to do with their own persons and property and to their knowledge, and the purchaser specifically is obliged the aforementioned plot of land. [Without the general obligation being detrimental to the special obligation or the one to the other]. The sale cannot be made without the completed and finalized payment, and they empower the judges so that each one may be compelled to each one that is appropriate, as if it were the final judgment of their competent past in the adjudicated matters and for with they consent, and renounce the Laws in favor of the General in the form of testimony, of which, grant the presentation being the witnesses named Don Francisco Goudeau, Don Luís Liotau, and Don Salomon Molinez, homeowners in this city, and not having prior knowledge of either party, to what has been concluded by Genoveva Junan, Don Francisco Goudeau, two of the witnesses, and by Maria Juana Don Luisliotau, another witness of whom I, the public notary, attest and recognize.
-
-For Genoveva Junon,
-[Signed:] Francisco Goudeau
-
-For Maria Juana,
-[Signed:] Louis Liotau [Rubric, Liotau]
-
-
-[p. # 4] (dig.5) 
-
-BLANK
